--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "echo 'Build successful'"
   },
   "dependencies": {
+    "@netlify/functions": "^3.1.10",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "firebase-admin": "^11.11.1",
