--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "build": "echo 'Build successful'"
+    "build": "echo 'Build successful'",
+    "dev": "node src/index.js" 
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "@netlify/functions": "^3.1.10",
