--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "build": "echo 'Build successful'",
-    "dev": "node src/index.js" 
+    "dev": "node src/index.js"
   },
   "engines": {
     "node": "18.x"
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "firebase-admin": "^11.11.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "serverless-http": "^3.2.0"
   }
 }
