--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^11.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5",
     "serverless-http": "^3.2.0"
   }
 }
