--- a/functions/package.json
+++ b/functions/package.json
@@ -8,6 +8,7 @@
     "build": "echo 'Build successful'"
   },
   "dependencies": {
+    "@netlify/functions": "^3.1.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^11.0.0",
